[package]
name = "di"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26", features = ["full"] }
process-stream = "0.3"

reqwest = { version = "0.11", features = ["json"] }

# Yaml
serde_yaml = "0.9"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
spinners = "4.1"
colored = "2"
inquire = "0.6"
